samples/_failures_safe/1761153956_242a80_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_454aa290.c:188:1: error: expected identifier or ‘(’ at end of input
  188 | void
      | ^~~~
